--- a/src/css/rent.css
+++ b/src/css/rent.css
@@ -141,7 +141,7 @@
 
 @media only screen and (min-width: 320px) and (max-width: 374px) {
   .rent-request {
-    width: 320px;
+    width: 300px;
   }
 }
 
@@ -160,7 +160,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 374px) {
   .rent-form {
-    width: 85%;
+    width: 95%;
   }
 }
 
