--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -3,19 +3,16 @@
   | Reviews Block
   |============================
 */
-.reviews-container {
-    padding: 0 20px;
-  }
 
 @media screen and (min-width: 768px) {
-    .reviews-container {
+  .reviews-container {
     padding: 0 32px;
-    }
+  }
 }
 
-  @media screen and (max-width: 767px) {
-    .reviews-section {
-    padding: 0 20px;
+@media screen and (max-width: 767px) {
+  .reviews-section {
+    padding: 0;
   }
 }
 
@@ -48,11 +45,10 @@
   line-height: 1.2;
 }
 
-@media screen and (max-width: 767px) { 
+@media screen and (max-width: 767px) {
   .reviews-title {
-  margin-bottom: 24px;
-
-  letter-spacing: -1.08px;
+    margin-bottom: 24px;
+    letter-spacing: -1.08px;
   }
 }
 
@@ -75,27 +71,27 @@
 /* reviews-subtitle  */
 
 .reviews-subtitle {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 @media screen and (min-width: 768px) {
-    .reviews-subtitle {
+  .reviews-subtitle {
     margin-bottom: 64px;
     margin-left: auto;
     width: 273px;
     font-size: 16px;
-    letter-spacing: -0.32px; 
-    }
+    letter-spacing: -0.32px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
-    .reviews-subtitle {
-     line-height: 1.4;
-    font-weight: 400;  
-    }
-    #reviews-slider-container{
-      width: 1216px;
-    }
+  .reviews-subtitle {
+    line-height: 1.4;
+    font-weight: 400;
+  }
+  #reviews-slider-container {
+    width: 1216px;
+  }
 }
 
 /* reviews-set */
@@ -107,36 +103,36 @@
 
 @media screen and (min-width: 1280px) {
   .reviews-set {
-  flex-wrap: nowrap;
-  /* gap: 32px;   */
-  }  
+    flex-wrap: nowrap;
+    /* gap: 32px;   */
+  }
 }
 
 /* reviews-card */
 
 .reviews-set .reviews-card {
-    padding: 24px 17px;
-    margin-bottom: 14px;
+  padding: 24px 17px;
+  margin-bottom: 14px;
 
-    border-radius: 24px;
-    background: var(--card-bg);
-    text-align: center;   
+  border-radius: 24px;
+  background: var(--card-bg);
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
-    .reviews-set .reviews-card {
+  .reviews-set .reviews-card {
     width: calc((100% - 16px) / 2);
     padding: 24px 12px;
     margin-bottom: 32px;
-    }
+  }
 }
 
 @media screen and (min-width: 1280px) {
-    .reviews-set .reviews-card {
+  .reviews-set .reviews-card {
     width: calc((100% - 64px) / 3);
     padding: 32px;
     margin: 0;
-    }
+  }
 }
 
 /* reviews-img */
@@ -145,11 +141,11 @@
 }
 
 @media screen and (min-width: 768px) {
-    .reviews-img {
+  .reviews-img {
     width: 56px;
     height: 56px;
-    margin: 0px auto 24px;  
-    }
+    margin: 0px auto 24px;
+  }
 }
 
 /* card-title */
@@ -162,10 +158,10 @@
   letter-spacing: -0.72px;
 }
 
- @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .reviews-card .card-title {
-  font-size: 18px;
-  letter-spacing: -0.81px; 
+    font-size: 18px;
+    letter-spacing: -0.81px;
   }
 }
 
@@ -175,13 +171,13 @@
   color: rgba(246, 245, 239, 0.5);
   font-size: 12px;
   letter-spacing: -0.24px;
-  }
+}
 
 @media screen and (min-width: 768px) {
-    .reviews-card .card-subtitle {
-     font-size: 16px;
+  .reviews-card .card-subtitle {
+    font-size: 16px;
     letter-spacing: -0.32px;
-    }
+  }
 }
 
 /*  Swiper */
